--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,11 @@ itsdangerous~=2.1.2
 httpcore~=0.17.2
 certifi~=2023.5.7
 w3lib~=2.1.1
+gunicorn~=20.1.0
 jmespath~=1.0.1
 pycparser~=2.21
 setuptools~=63.2.0
 packaging~=23.1
 Brotli~=1.0.9
 wsproto~=1.2.0
-gunicorn~=20.1.0
+Flask-Compress~=1.13
